--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "body": "^5.1.0",
     "body-parser": "^1.20.0",
+    "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.1",
     "mongoose": "^6.5.5",
+    "mongoose-encryption": "^2.1.2",
     "nodemon": "^2.0.19"
   }
 }
